<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL_IO_K" Id="{aca27c03-5b36-4d7d-8dc5-851086c4d5dd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
			//wyjścia
			bK1 AT%Q* :BOOL	;	// zaw_hamulec 1
			bK2 AT%Q* :BOOL	;	// zaw_hamulec 2
			bK3 AT%Q* :BOOL	;	//  zaw hamulec
			bK4 AT%Q* :BOOL	;	//  serwo 
			bK5 AT%Q* :BOOL	;	// falownik podajnika
			bK6 AT%Q* :BOOL	;	// 
			bK7 AT%Q* :BOOL	;	// 
			bK8 AT%Q* :BOOL	;	// 
			

//wejścia
			
			b4B1 AT%I* :BOOL	; //czujnik liczenie 1
			b4B2 AT%I* :BOOL	; //czujnik liczenie 2
			b4B3 AT%I* :BOOL	; //czujnik liczenie 3
			b4B4 AT%I* :BOOL	; //czujnik liczenie 4
			b4B5 AT%I* :BOOL	; //czujnik liczenie 5
			b4B6 AT%I* :BOOL	; // kontraktron 2
			b4B7 AT%I* :BOOL	; // kontraktron 1
			b4B8 AT%I* :BOOL	; //czujnik obecności butelki
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>