<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_MCHomeIO" Id="{f0ac6427-a2cd-40f7-b604-aaf9bca4868c}">
    <Declaration><![CDATA[//==================================================================================================
//							Beckhoff Automation Poland
//									18.04.2018
//	Struktura zawierajaca I/O odpowiedniego bloku
//  v1.0	|| TC v 3.1.4022.16		|| - pierwsza wersja
//==================================================================================================
TYPE ST_MCHomeIO:
STRUCT
	bExecute						: BOOL;								// Rising edge executes cmd
	lrPosition						: LREAL					:= DEFAULT_HOME_POSITION;
	eHomingMode						: Tc2_MC2.MC_HomingMode;
	eBufferMode						: Tc2_MC2.MC_BufferMode;
	stOptions						: Tc2_MC2.ST_HomingOptions;
	bCalibrationCam					: BOOL;
	bDone							: BOOL;
	bBusy							: BOOL;
	bActive							: BOOL;
	bCommandAborted					: BOOL;
	bError							: BOOL;
	udiErrorID						: UDINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>